#21 Finished adjusting layout/styling of the patient banner, added alerts bar. Added cleaner underline hover effects to nav bar links. Fixed small bug where hovering over the dark mode switch doesn't change the cursor to indicate it is clickable. Making PR.

--- a/EHRApplication/EHRApplication/wwwroot/css/site.css
+++ b/EHRApplication/EHRApplication/wwwroot/css/site.css
@@ -15,15 +15,53 @@ body {
 }
 
     .nav-link:hover, #srchBtn:hover {
-        color: #181818;
+        transform: translateY(1px);
     }
 
+
+
+@keyframes movingUnderline {
+    0% {
+        width: 0;
+        left: 50%;
+    }
+
+    100% {
+        width: 100%;
+        left: 0;
+    }
+}
+
+.nav-item {
+    position: relative;
+}
+
+.nav-item::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    width: 0;
+    height: 2px; /* Adjust the thickness of the underline */
+    background-color: white;
+    transition: width 0.3s ease, left 0.3s ease; /* Smooth transition for the underline */
+}
+
+.nav-item:hover::after {
+    width: 100%;
+    left: 0;
+    animation: movingUnderline 0.3s ease; /* Animation for moving underline */
+}
+
+#flexSwitchCheckChecked {
+    cursor: pointer;
+}
 /* End top nav */
 
-/* General default styles. */
 
+/* General default styles. */
 @media (min-width: 768px) {
-  html {
+    html {
     font-size: 16px;
   }
 }
@@ -36,11 +74,6 @@ html {
   position: relative;
   min-height: 100vh;
 }
-
-/*body {
-    margin-bottom: 60px;
-}
-*/
 
 
 /* Side nav section */
@@ -77,8 +110,7 @@ html {
     height: 100%;
     margin-left: -250px;
     overflow-y: auto;
-/*    background-color: #181818;
-*/    -webkit-transition: all 0.5s ease;
+    -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
     transition: all 0.5s ease;
@@ -107,6 +139,7 @@ html {
 .fixed-brand {
     width: auto;
 }
+
 /* Sidebar Styles */
 
 .sidebar-nav {
@@ -285,7 +318,27 @@ html {
 .text-sm {
     font-size: 13px;
 }
-    /* End main styles */
+
+
+
+
+.alert-bar {
+    background-color: yellow;
+    color: black;
+    text-align: center;
+    cursor: pointer;
+    height: 22px;
+    font-size: 14px;
+    border-top: ridge;
+    border-bottom: ridge;
+    border-width: 2px
+}
+
+    .alert-bar:hover {
+        filter: brightness(0.93)
+    }
+
+/* End main styles */
 
 
 
@@ -302,17 +355,6 @@ body[data-bs-theme=dark] {
     color: var(--offwhite);
     background-color: var(--black);
 }
-
-[data-bs-theme=dark].bg-red {
-    background-color: var(--dark-red);
-}
-
-
-/*[data-bs-theme=dark]#patient-info-banner {
-    color: var(--offwhite);
-    background-color: var(--black) !important;
-}
-*/
 
 [data-bs-theme=dark].card {
     background-color: var(--mid-gray);
